# MNM-Fasteners-Agent

./: .gitignore  INSTALL.md  InventoryExport.xlsx  README.md  Sales_Orders_20251217_155734.xlsx  Sales_Orders_Test2.xlsx  Sales_Orders_Test3.xlsx  check_sage_setup.py  config.example.env  find_sage.py  import_inventory.py  pyproject.toml  requirements.txt  setup.py  test_api_import.py  test_sample_import.py
agent/: __init__.py  cli.py  config.py  core.py  demo.py  logging_config.py  models.py  sync_service.py  windows_service.py
agent/communication/: __init__.py  connection_manager.py  polling_client.py  websocket_client.py
agent/executor/: __init__.py  task_executor.py  task_queue.py
agent/reports/: __init__.py  email_sender.py  report_generator.py
agent/sage50/: __init__.py  connector.py  excel_import.py  operations.py  sdk_operations.py
agent/tracking/: __init__.py  carrier_api.py  tracking_manager.py
agent/transform/: __init__.py  cleaner.py  formatter.py  validator.py
scripts/: install.ps1  uninstall.ps1
server/: __init__.py  api_example.py  requirements.txt
tests/: __init__.py  test_models.py  test_task_queue.py
